Saved before continuing.