@@ -8,7 +8,7 @@ import toks.Tok;
 import toks.TokType;
 
 import java.io.IOException;
-import java.util.ArrayDeque;
+import java.util.ArrayList;
 
 public class Lexer {
     private final LexReader reader;
@@ -16,7 +16,7 @@ public class Lexer {
     private final NumLexer numLexer;
     private final KeywordLexer kwLexer;
     private final OpLexer opLexer;
-    private final ArrayDeque<Tok> tokBuff = new ArrayDeque<>();
+    private final ArrayList<Tok> tokBuff = new ArrayList<>();
 
     public Lexer(LexReader reader) {
         this.reader = reader;
@@ -27,10 +27,21 @@ public class Lexer {
     }
 
     /**
-     * Pops the next token off the buffer.
+     * Consumes the next token by popping it off the buffer.
+     *
+     * @param context the parsing context.
+     * @return a LexResult object as the result of consuming the next token.
+     * @throws IOException if the read operation causes an IO error.
      */
-    public void consume() {
-        tokBuff.removeFirst();
+    public LexResult<Tok> consume(ParseContext context) throws IOException {
+        if (tokBuff.isEmpty()) {
+            LexResult<Tok> tokResult = lookahead(context);
+            if (tokResult.getStatus() == LexStatus.ERR) {
+                return tokResult;
+            }
+        }
+
+        return LexResult.ok(tokBuff.remove(0));
     }
 
     /**
@@ -47,78 +58,96 @@ public class Lexer {
     /**
      * Performs multistep lookahead.
      *
-     * @param steps   the number of steps to lookahead.
+     * @param steps   the number of steps to look ahead.
      * @param context the parsing context.
      * @return a LexResult object as the result of looking ahead the given number of steps.
      * @throws IOException if the read operation causes an IO error.
      */
     public LexResult<Tok> lookahead(int steps, ParseContext context) throws IOException {
-        LexResult<Tok> result = null;
+        LexResult<Tok> tokResult;
+        int buffSize = tokBuff.size();
 
-        for (int i = 0; i < steps; ++i) {
-            result = lookahead(context);
-            // We don't have to check if it has failed here
-            // If there is an error, it is returned immediately
-            if (result.getStatus() == LexStatus.ERR) {
-                return result;
+        if (buffSize < steps) {
+            for (int i = 0; i < steps - buffSize; ++i) {
+                tokResult = extractTok(context);
+                if (tokResult.getStatus() == LexStatus.ERR) {
+                    return tokResult;
+                }
+                tokBuff.add(tokResult.getData());
             }
         }
 
-        return result;
+        return LexResult.ok(tokBuff.get(steps - 1));
     }
 
     /**
-     * Looks ahead to the next token without removing it from the stream.
+     * Looks ahead to the next token without removing it from the buffer.
      *
      * @param context the parsing context.
      * @return a LexResult object as the result of peeking at the next token.
      * @throws IOException if the read operation causes an IO error.
      */
     public LexResult<Tok> lookahead(ParseContext context) throws IOException {
-        // Reads from the token buffer before extracting characters from the stream
+        // Read from the token buffer before extracting a token from the stream
         if (!tokBuff.isEmpty()) {
-            return LexResult.ok(tokBuff.peekFirst());
+            return LexResult.ok(tokBuff.get(0));
         }
+
+        LexResult<Tok> tokResult = extractTok(context);
+        if (tokResult.getStatus() == LexStatus.ERR) {
+            return tokResult;
+        }
+
+        tokBuff.add(tokResult.getData());
+        return tokResult;
+    }
+
+    /**
+     * Extracts a token from the stream.
+     *
+     * @param context the parsing context.
+     * @return a LexResult object as the result of extracting a token.
+     * @throws IOException if the read operation causes an IO error.
+     */
+    private LexResult<Tok> extractTok(ParseContext context) throws IOException {
         skipComment();
         reader.skipSpaces();
-        // Check if the token is EOF
+
+        // Check if the token is end-of-stream
         Tok tok;
         if (reader.peek() == LexReader.EOS) {
             SrcPos srcPos = reader.getSrcPos();
             SrcRange srcRange = new SrcRange(srcPos);
             tok = new Tok(null, TokType.EOS, srcRange);
-            tokBuff.addLast(tok);
             return LexResult.ok(tok);
         }
+
         // Check if the token is a keyword
         LexResult<Tok> result = kwLexer.read(context);
         if (result.getStatus() == LexStatus.OK) {
-            tok = result.getData();
-            tokBuff.addLast(tok);
             return result;
         }
+
         // Check if the token is a number
         result = numLexer.read();
         if (result.getStatus() == LexStatus.OK) {
-            tok = result.getData();
-            tokBuff.addLast(tok);
             return result;
         }
+
         // Check if the token is an operator
         result = opLexer.read(context);
         if (result.getStatus() == LexStatus.OK) {
-            tok = result.getData();
-            tokBuff.addLast(tok);
             return result;
         }
+
         // Check if the token is id
         result = alnum_Lexer.read();
         if (result.getStatus() == LexStatus.OK) {
             tok = result.getData();
             tok.setTokType(TokType.ID);
-            tokBuff.addLast(tok);
             return result;
         }
+
         // Cannot read the next token
         return LexResult.err(new ErrMsg("Unable to get next token because of invalid syntax at '" +
                 (char) reader.peek() + "'", reader.getSrcPos()));
